# tsukumo

./: .gitignore  .hermes.md  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
archive/: DESIGN-A.md  (+1 more)
crates/tsukumo-adapters/: Cargo.toml
crates/tsukumo-adapters/examples/: a1_stream_demo.rs
crates/tsukumo-adapters/fixtures/: claude_c1_success.jsonl  codex_0_135_0_gnu_capture_manifest.json  codex_0_135_0_gnu_with_state.jsonl  codex_0_135_0_gnu_without_state.jsonl  codex_0_135_0_success.jsonl  synthetic_a1.jsonl
crates/tsukumo-adapters/src/: briefing.rs  claude.rs  codex.rs  codex_json.rs  lib.rs  runtime.rs  stream_json.rs  synthetic.rs  vendor_fields.rs
crates/tsukumo-adapters/src/codex_json/: mapping.rs
crates/tsukumo-adapters/src/stream_json/: mapping.rs
crates/tsukumo-adapters/tests/: a1_drive_stage.rs  c1_state_theater_cross_layer.rs  codex_decoder_contract.rs  codex_runtime_contract.rs  runtime_identity_contract.rs  runtime_profile_contract.rs  sensitive_pipeline_contract.rs  stream_json_contract.rs
crates/tsukumo-host/: Cargo.toml
crates/tsukumo-host/content/default-shiori/: pack.json  scene.json
crates/tsukumo-host/examples/: workshop_frame.rs
crates/tsukumo-host/src/: cleanup.rs  cli.rs  clock.rs  config.rs  envelope.rs  episode.rs  host_api.rs  host_error.rs  ledger.rs  lib.rs  local_path.rs  main.rs  orchestrator.rs  presentation_pack.rs  process.rs  process_handle.rs  process_reader.rs  product.rs  reentry.rs  report.rs  runtime_probe.rs  safety.rs  session.rs  terminal.rs  tui.rs
crates/tsukumo-host/src/local_path/: guard.rs  rules.rs  tests.rs  windows.rs
crates/tsukumo-host/src/product/: actions.rs  read_model.rs
crates/tsukumo-host/tests/: claude_live.rs  cli_parse_contract.rs  cross_runtime_comparison_contract.rs  cross_runtime_live.rs  episode_inspect_contract.rs  episode_runner_contract.rs  host_cli_contract.rs  local_path_contract.rs  orchestrator_contract.rs  presentation_boundary_contract.rs  presentation_pack_contract.rs  process_contract.rs  product_controller_contract.rs  product_hot_journal_contract.rs  product_inspector_edge_contract.rs  product_inspector_render_contract.rs  product_permission_render_contract.rs  product_render_contract.rs  runtime_failures_contract.rs  runtime_permission_contract.rs  safety_contract.rs  tui_contract.rs
crates/tsukumo-kernel/: Cargo.toml
crates/tsukumo-kernel/src/: event.rs  event_validation.rs  identity.rs  lib.rs  redaction.rs  session.rs  value.rs
crates/tsukumo-kernel/tests/: c1_event_contract.rs  c1_outcome_contract.rs
crates/tsukumo-soul/: Cargo.toml
crates/tsukumo-soul/examples/: c1_state_demo.rs  recall_demo.rs
crates/tsukumo-soul/src/: brief.rs  chronicle.rs  chronicle_read.rs  comparison.rs  export.rs  extract.rs  handoff.rs  handoff_error.rs  handoff_loop.rs  handoff_model.rs  handoff_repository.rs  handoff_shape.rs  inject.rs  legacy.rs  lib.rs  migrations.rs  migrations_v3.sql  projection.rs  projection_budget.rs  projection_error.rs  projection_model.rs  projection_render.rs  projection_repository.rs  projection_selection.rs  skills.rs  state.rs  state_codec.rs  state_model.rs  state_repository.rs  state_scope.rs  state_validation.rs  storage.rs  store.rs  trace.rs
crates/tsukumo-soul/tests/: c1_checkpoint.rs  c1_chronicle.rs  c1_chronicle_read.rs  c1_comparison.rs  c1_exports.rs  c1_extraction.rs  c1_legacy_import.rs  c1_legacy_safety.rs  c1_projection.rs  c1_projection_budget.rs  c1_projection_selection.rs  c1_receipt.rs  c1_recorded_state.rs  c1_state_conflict.rs  c1_state_evidence.rs  c1_state_lifecycle.rs  c1_state_metadata.rs  c1_state_migration.rs  c1_state_safety.rs  c1_state_trust.rs  c1_state_ttl.rs  c1_state_writer.rs  c1_trace_errors.rs  cross_session_recall.rs
crates/tsukumo-theater/: Cargo.toml
crates/tsukumo-theater/examples/: workshop_demo.rs
crates/tsukumo-theater/fixtures/: minimal_quest.jsonl
crates/tsukumo-theater/src/: director.rs  drive.rs  lib.rs  render.rs  stage.rs  world.rs
crates/tsukumo-theater/tests/: app_reducer_contract.rs  attribution_contract.rs  director_contract.rs  fixture_replay.rs  presentation_pack_contract.rs  presentation_pack_security_contract.rs
(+159 files in other folders)
