[package]
name = "tsukumo-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tsukumo composition root and owned runtime lifecycle"

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tsukumo-adapters = { workspace = true }
tsukumo-kernel = { workspace = true }
tsukumo-soul = { workspace = true }
tsukumo-theater = { workspace = true }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
