[package]
name = "tsukumo-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tsukumo L1 kernel: KernelEvent contract, identity stubs, session JSONL helpers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
